# s3reader

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: external_types.rs  lib.rs  metadata.rs
