[package]
name = "s3reader"
version = "0.3.0"
edition = "2021"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
description = "Read S3 object like local files with byte offsets"
readme = "README.md"
homepage = "https://github.com/anergictcell/s3reader"
repository = "https://github.com/anergictcell/s3reader"
license = "MIT"
keywords = ["aws", "s3", "reader", "aws-sdk-s3"]
categories = ["api-bindings", "filesystem"]


[dependencies]
aws-config = "0.47.0"
aws-sdk-s3 = "0.17.0"
aws-types = "0.47.0"
bytes = "1.2.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.32"