[package]
name = "s3reader"
version = "1.2.1"
edition = "2021"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
description = "Read S3 object like local files with byte offsets"
readme = "README.md"
homepage = "https://github.com/anergictcell/s3reader"
repository = "https://github.com/anergictcell/s3reader"
license = "MIT"
keywords = ["aws", "s3", "reader", "aws-sdk-s3"]
categories = ["api-bindings", "filesystem"]


[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
aws-types = "1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
